--- a/identidadlatas.html
+++ b/identidadlatas.html
@@ -10,15 +10,13 @@
 
 <body>
     <main>
-        <section class="detalle-galeria">
-            <div>
+        <section class="datallado-g">
             <div class="detalle-titulo">
                 <a href="misproyectos.html">
                     <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
                         height="60px">
                 </a>
-                </div>
-                <article class="info-proyecto">
+                <article >
                     <h2>Afiche cultural</h2>
                     <h3>Iris Van Herpen</h3>
                     <p>Trabajo realizado para la materia taller de diseño II, el objetivo
@@ -27,17 +25,16 @@
                         una
                         diseñadora de moda Holandesa</p>
                 </article>
-                <div class="boton-visitar">
+                <div class="boton-visitar2">
                     <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
                         target="_blank">visitar</a>
                 </div>
             </div>
             <div class="contenedor">
                 <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="806"
-                    height="995px">
+                    height="1045px">
             </div>
         </section>
     </main>
 </body>
-
 </html>
