--- a/misproyectos.html
+++ b/misproyectos.html
@@ -85,6 +85,7 @@
                 </div>
                 <button class="next" onclick="moveSlide(1)">&#10095;</button>
             </div>
+            </section>
     </main>
     <footer id="contacto">
         <div class="redes">
