--- a/jacquelinecasey.html
+++ b/jacquelinecasey.html
@@ -12,11 +12,11 @@
     <main>
         <section class="detalle-galeria">
             <div>
-            <div class="detalle-titulo">
-                <a href="misproyectos.html">
-                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                        height="60px">
-                </a>
+                <div class="detalle-titulo">
+                    <a href="misproyectos.html">
+                        <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                            height="60px">
+                    </a>
                 </div>
                 <article class="info-proyecto">
                     <h2>Afiche cultural</h2>
@@ -28,13 +28,12 @@
                         diseñadora de moda Holandesa</p>
                 </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II" alt="Diseño de libro" 
-                        target="_blank">visitar</a>
+                    <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista" alt="Diseño de libtos" target="_blank">visitar</a>
                 </div>
             </div>
             <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="720"
-                    height="9px">
+                <img src="./img/proyectos/img-proyectos-detalle/jaquelinecasey.jpg" alt="imagen afiche" width="720"
+                    height="933px">
             </div>
         </section>
     </main>
