--- a/oceanoslibres.html
+++ b/oceanoslibres.html
@@ -19,22 +19,19 @@
                 </a>
                 </div>
                 <article class="info-proyecto">
-                    <h2>Afiche cultural</h2>
-                    <h3>Iris Van Herpen</h3>
-                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                        herpen
-                        una
-                        diseñadora de moda Holandesa</p>
+                    <h2>*/ Afiche</h2>
+                    <h3>Océanos libres</h3>
+                    <p>Este afiche fue realizado en el marco de la materia Taller de Diseño II,
+                con un enfoque en la problemática social de la contaminación ambiental. A través de una combinación de técnicas digitales y analógicas, este trabajo busca concientizar sobre el impacto devastador
+                que los derrames de petróleo tienen en la fauna marina.</p>
                 </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II" alt="Diseño de libro" 
-                        target="_blank">visitar</a>
+                    <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" alt="Diseño de infograFIA" target="_blank"> visitar</a>
                 </div>
             </div>
             <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="720"
-                    height="9px">
+                <img src="./img/proyectos/img-proyectos-detalle/oceanoslibres.jpg" alt="imagen afiche" width="720"
+                    height="933px">
             </div>
         </section>
     </main>
