--- a/identidadlatas.html
+++ b/identidadlatas.html
@@ -10,31 +10,30 @@
 
 <body>
     <main>
-        <section class="datallado-g">
+        <section class="detalle-galeria">
+            <div>
             <div class="detalle-titulo">
                 <a href="misproyectos.html">
                     <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
                         height="60px">
                 </a>
-                <article >
-                    <h2>Afiche cultural</h2>
-                    <h3>Iris Van Herpen</h3>
-                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                        herpen
-                        una
-                        diseñadora de moda Holandesa</p>
+                </div>
+                <article class="info-proyecto">
+                    <h2>*/ infografía</h2>
+                    <h3>mate eléctrico</h3>
+                    <p>Esta infografía fue realizada como parte de la materia Tipografía III, 
+                        en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.</p>
                 </article>
-                <div class="boton-visitar2">
-                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
-                        target="_blank">visitar</a>
+                <div class="boton-visitar">
+                    <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" alt="Diseño de infograFIA" target="_blank"> visitar </a>
                 </div>
             </div>
             <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="806"
-                    height="1045px">
+                <img src="./img/proyectos/img-proyectos-detalle/latas.jpg" alt="imagen afiche" width="806"
+                    height="995px">
             </div>
         </section>
     </main>
 </body>
+
 </html>
