--- a/infografia.html
+++ b/infografia.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <section class="detalle-galeria-2">
+        <section class="detalle-galeria">
             <div>
             <div class="detalle-titulo">
                 <a href="misproyectos.html">
@@ -24,13 +24,13 @@
                     <p>Esta infografía fue realizada como parte de la materia Tipografía III, 
                         en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.</p>
                 </article>
-                <div class="boton-visitar2">
-                    <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" alt="Diseño de infograFIA"target="_blank">visitar</a>
+                <div class="boton-visitar">
+                    <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" alt="Diseño de infograFIA" target="_blank"> visitar</a>
                 </div>
             </div>
-            <div class="contenedor-2">
-                <img src="./img/proyectos/img-proyectos-detalle/infografia.jpg" alt="imagen afiche" width="806"
-                    height="995px">
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/infografia.jpg" alt="imagen afiche" width="720"
+                    height="933px">
             </div>
         </section>
     </main>
