--- a/juancito.html
+++ b/juancito.html
@@ -19,22 +19,18 @@
                 </a>
                 </div>
                 <article class="info-proyecto">
-                    <h2>Afiche cultural</h2>
-                    <h3>Iris Van Herpen</h3>
-                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                        herpen
-                        una
-                        diseñadora de moda Holandesa</p>
+                    <h2>*/ infografía</h2>
+                    <h3>mate eléctrico</h3>
+                    <p>Esta infografía fue realizada como parte de la materia Tipografía III, 
+                        en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.</p>
                 </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II" alt="Diseño de libro" 
-                        target="_blank">visitar</a>
+                    <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa" alt="Diseño de infograFIA" target="_blank"> visitar </a>
                 </div>
             </div>
             <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="720"
-                    height="9px">
+                <img src="./img/proyectos/img-proyectos-detalle/juancito.jpg" alt="imagen afiche" width="806"
+                    height="995px">
             </div>
         </section>
     </main>
