--- a/misproyectos.html
+++ b/misproyectos.html
@@ -35,51 +35,39 @@
                     <div class="carousel-track" id="carousel-track">
                         <!-- Proyecto 1 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto1.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche Iris van Herpen">
-                            </a>
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto1.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="irisvanherpen.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 2 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto2.com" target="_blank">
-                                <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Afiche Oceanos Libres">
-                            </a>
+                                <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas">
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto2.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="identidadlatas.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 3 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto3.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="Proyecto Editorial">
-                            </a>
                             <h4>Editorial</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto3.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="jacquelinecasey.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 4 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto4.com" target="_blank">
                                 <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
-                            </a>
                             <h4>Infografía</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="infografia.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 5 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto4.com" target="_blank">
-                                <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="Proyecto 4">
-                            </a>
+                                <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="AFiche océanos libres">
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="oceanoslibres.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 6 -->
                         <div class="carousel-item">
-                            <a href="https://enlace-al-proyecto4.com" target="_blank">
-                                <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Proyecto 4">
-                            </a>
+                                <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Imagen de identidad de juancito">
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="https://enlace-detalle-proyecto4.com" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="juancito.html" target="_blank">Ver más</a>
                         </div>
                     </div>
                 </div>
