--- a/sobremi.html
+++ b/sobremi.html
@@ -45,7 +45,7 @@
             </div>
         </section>
         <section class="intereses">
-            <h2>*/ intereses</h2>
+            <h2>*/ hobbies</h2>
             <ul>
                 <li>crear</li>
                 <li>aprender</li>
