--- a/sobremi.html
+++ b/sobremi.html
@@ -35,10 +35,10 @@
                     height="580px">
                 <article class="presentacion">
                     <h4>Diseñadora gráfica Jr.</h4>
-                    <p>Soy estudiante de Diseño y Comunicación Visual en la Universidad Nacional de Lanús,
+                    <p>Hola! soy Natii, estudiante de Diseño y Comunicación Visual en la Universidad Nacional de Lanús,
                         en Buenos Aires. Actualmente estoy cursando el cuarto año. Me apasiona el diseño,
                         en especial la tipografía, y disfruto crear proyectos que conecten con las personas.
-                        Me considero creativa y responsable, siempre en búsqueda de nuevos aprendizajes. Viajar para
+                        Me considero creativa y responsable, siempre estoy en búsqueda de nuevos aprendizajes. Viajar para
                         conocer diferentes culturas es uno de mis hobbies, y me inspira en mi proceso creativo.
                     </p>
                 </article>
