--- a/misproyectos.html
+++ b/misproyectos.html
@@ -26,46 +26,55 @@
     <main class="galeria">
         <section>
             <div class="inicio-carousel">
-                <h2>*/ Mis proyectos</h2>
-                <p>Te invito a ver algunmos de mis trabajos realizados</p>
+                <div class="titulo-avion">
+                    <h2>*/ Mis proyectos</h2>
+                    <p>Te invito a ver algunos de mis trabajos realizados</p>
+                </div>
+            <div class="avion-proyectos">
+                <img src="./img/ilustraciones/herramientas.png" alt="animacion brillo" width="404px" height="170px">
             </div>
+        </div>
             <div class="carousel-container">
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
                 <div class="carousel">
                     <div class="carousel-track" id="carousel-track">
                         <!-- Proyecto 1 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg" alt="Afiche Iris van Herpen">
+                            <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg"
+                                alt="Afiche Iris van Herpen">
                             <h4>Afiche</h4>
                             <a class="ver-mas" href="irisvanherpen.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 2 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas">
+                            <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas">
                             <h4>Identidad</h4>
                             <a class="ver-mas" href="identidadlatas.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 3 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg" alt="Proyecto Editorial">
+                            <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg"
+                                alt="Proyecto Editorial">
                             <h4>Editorial</h4>
                             <a class="ver-mas" href="jacquelinecasey.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 4 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
+                            <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
                             <h4>Infografía</h4>
                             <a class="ver-mas" href="infografia.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 5 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg" alt="AFiche océanos libres">
+                            <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg"
+                                alt="AFiche océanos libres">
                             <h4>Afiche</h4>
                             <a class="ver-mas" href="oceanoslibres.html" target="_blank">Ver más</a>
                         </div>
                         <!-- Proyecto 6 -->
                         <div class="carousel-item">
-                                <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg" alt="Imagen de identidad de juancito">
+                            <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg"
+                                alt="Imagen de identidad de juancito">
                             <h4>Identidad</h4>
                             <a class="ver-mas" href="juancito.html" target="_blank">Ver más</a>
                         </div>
@@ -73,7 +82,7 @@
                 </div>
                 <button class="next" onclick="moveSlide(1)">&#10095;</button>
             </div>
-            </section>
+        </section>
     </main>
     <footer id="contacto">
         <div class="redes">
@@ -103,10 +112,8 @@
             <h6> Copyright © 2024 Natalia Oviedo</h6>
         </div>
     </footer>
-    
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
-
-
