--- a/formulario.html
+++ b/formulario.html
@@ -30,31 +30,33 @@
                 <img src="./img/ilustraciones/ilustracion-avion.png" alt="ilustracion de avion" width="360px"
                     height="161px">
             </div>
-            <div class= "formulario">
+            <div class="formulario">
                 <div class="texto-lectura">
-                    <h2> ¿Te gustaría que trabajemos en un proyecto juntos?  </h2>
+                    <h2> ¿Te gustaría que trabajemos en un proyecto juntos? </h2>
                 </div>
-            <div class="campos">
-                <form method="post"
-                    action="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia email enviado desde el formulario"
-                    target="_blank" enctype="text/plain">
-                    <div class="info">
-                        <p> *Los campos con asteriscos son obligatorios! </p>
-                        <label for="Nombre"> Nombre y Apellido</label>
-                        <input type="text" name="Nombre" id="Nombre" maxlength="30" placeholder=" Nombre completo"
-                            required>
-                        <label for="email">Correo electronico</label>
-                        <input type="email" name="email" id="Email" placeholder="Email" required>
-                        <label for="tel">Teléfono</label>
-                        <input type="tel" name="Telefono" id="Telefono" placeholder="(011)00000000">
-                    </div>
-                    <div class="info2">
-                        <label for="Mensaje">Mensaje</label>
-                        <textarea name="Mensaje" id="Mensaje" maxlength="600"></textarea>
-                        <input type="reset" value="Borrar" class="borrar">
-                        <input type="submit" value="Enviar" class="enviar">
-                    </div>
-                </form>
+                <div class="campos">
+                    <form method="post"
+                        action="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia email enviado desde el formulario"
+                        target="_blank" enctype="text/plain">
+                        <div class="info">
+                            <p> *Los campos con asteriscos son obligatorios! </p>
+                            <label for="Nombre"> Nombre y Apellido</label>
+                            <input type="text" name="Nombre" id="Nombre" maxlength="30" placeholder=" Nombre completo"
+                                required>
+                            <label for="email">Correo electronico</label>
+                            <input type="email" name="email" id="Email" placeholder="Email" required>
+                            <label for="tel">Teléfono</label>
+                            <input type="tel" name="Telefono" id="Telefono" placeholder="(011)00000000">
+                        </div>
+                        <div class="info2">
+                            <label for="Mensaje">Mensaje</label>
+                            <textarea name="Mensaje" id="Mensaje" maxlength="600"></textarea>
+                            <div class="botones.form">
+                                <input type="reset" value="Borrar" class="borrar">
+                                <input type="submit" value="Enviar" class="enviar">
+                            </div>
+                        </div>
+                    </form>
                 </div>
         </section>
     </main>
