--- a/sobremi.html
+++ b/sobremi.html
@@ -53,13 +53,13 @@
             </ul>
             <img src="./img/giff/ilustracion.gif" alt="animacion de lineas" width="1910px" height="430px">
         </section>
-        <section class="informacion-personal"><!---ver si este div es necesario--->
-            <div class="grid-item a">
+        <section class="informacion-personal"> <!---ver si este div es necesario--->
+            <div class="grid-item uno">
                 <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba"
                         width="60px" height="60px"></a>
             </div>
-            <div class="grid-item b">
-                <h3>Educación</h3>
+            <div class="grid-item dos">
+                <h3>*/ Educación</h3>
                 <ul class="info-lista">
                     <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
                     <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
@@ -67,8 +67,8 @@
                     <li>Curso de Diseño UX/UI (cursando actualmente)</li>
                 </ul>
             </div>
-            <div class="grid-item c">
-                <h3>Idiomas</h3>
+            <div class="grid-item tres">
+                <h3>*/ Idiomas</h3>
                 <ul class="info-lista">
                     <li class="negrita">Español </li>
                     <li>Nativo</li>
@@ -78,8 +78,8 @@
                     <li> Nivel medio</li>
                 </ul>
             </div>
-            <div class="grid-item d">
-                <h3>Habilidades</h3>
+            <div class="grid-item cuatro">
+                <h3>*/ Habilidades</h3>
                 <ul class="info-lista2">
                     <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px">
                     </li>
