--- a/formulario.html
+++ b/formulario.html
@@ -50,8 +50,9 @@
                         </div>
                         <div class="info2">
                             <label for="Mensaje">Mensaje</label>
-                            <textarea name="Mensaje" id="Mensaje" maxlength="600"></textarea>
-                            <div class="botones.form">
+                            <textarea name="Mensaje" id="Mensaje" maxlength="600" width="900px"
+                                height="200px"></textarea>
+                            <div class="botones-form">
                                 <input type="reset" value="Borrar" class="borrar">
                                 <input type="submit" value="Enviar" class="enviar">
                             </div>
