--- a/formulario.html
+++ b/formulario.html
@@ -59,6 +59,7 @@
                         </div>
                     </form>
                 </div>
+                </div>
             </section>
     </main>
     <footer id="contacto">
