cambios en galeria

--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body class="body-formulario">
     <header>
         <nav id="botonera">
             <div class="logo">
