--- a/identidadlatas.html
+++ b/identidadlatas.html
@@ -11,26 +11,29 @@
 <body>
     <main>
         <section class="detalle-galeria">
-            <div>
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/latas.jpg" alt="imagen afiche" width="1300"
+                    height="870px">
+            </div>
             <div class="detalle-titulo">
-                <a href="misproyectos.html">
-                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                        height="60px">
-                </a>
+                <div class="boton-volver">
+                    <a href="misproyectos.html">
+                        <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                            height="60px">
+                    </a>
                 </div>
                 <article class="info-proyecto">
                     <h2>*/ infografía</h2>
                     <h3>mate eléctrico</h3>
-                    <p>Esta infografía fue realizada como parte de la materia Tipografía III, 
-                        en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.</p>
+                    <p>Esta infografía fue realizada como parte de la materia Tipografía III,
+                        en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto
+                        de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.
+                    </p>
                 </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" alt="Diseño de infograFIA" target="_blank"> visitar </a>
+                    <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas"
+                        alt="Diseño de infograFIA" target="_blank"> visitar </a>
                 </div>
-            </div>
-            <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/latas.jpg" alt="imagen afiche" width="806"
-                    height="995px">
             </div>
         </section>
     </main>
