--- a/juancito.html
+++ b/juancito.html
@@ -11,13 +11,17 @@
 <body>
     <main>
         <section class="detalle-galeria">
-            <div>
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/juancito.jpg" alt="imagen afiche" width="1300"
+                    height="870px">
+            </div>
             <div class="detalle-titulo">
+                <div class="boton-volver">
                 <a href="misproyectos.html">
                     <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
                         height="60px">
                 </a>
-                </div>
+            </div>
                 <article class="info-proyecto">
                     <h2>*/ infografía</h2>
                     <h3>mate eléctrico</h3>
@@ -27,10 +31,6 @@
                 <div class="boton-visitar">
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa" alt="Diseño de infograFIA" target="_blank"> visitar </a>
                 </div>
-            </div>
-            <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/juancito.jpg" alt="imagen afiche" width="806"
-                    height="995px">
             </div>
         </section>
     </main>
