--- a/misproyectos.html
+++ b/misproyectos.html
@@ -30,10 +30,10 @@
                     <h2>*/ Mis proyectos</h2>
                     <p>Te invito a ver algunos de mis trabajos realizados</p>
                 </div>
-            <div class="avion-proyectos">
-                <img src="./img/ilustraciones/herramientas.png" alt="animacion brillo" width="404px" height="170px">
+                <div class="ilustracion2">
+                    <img src="./img/ilustraciones/herramientas.png" alt="animacion brillo" width="404px" height="170px">
+                </div>
             </div>
-        </div>
             <div class="carousel-container">
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
                 <div class="carousel">
