--- a/oceanoslibres.html
+++ b/oceanoslibres.html
@@ -11,28 +11,31 @@
 <body>
     <main>
         <section class="detalle-galeria">
-            <div>
+            <div class="contenedor">
+                <div>
+                <img src="./img/proyectos/img-proyectos-detalle/oceanoslibres.jpg" alt="imagen afiche" width="1300"
+                    height="870px">
+            </div>
             <div class="detalle-titulo">
-                <a href="misproyectos.html">
-                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                        height="60px">
-                </a>
+                <div class="boton-volver">
+                    <a href="misproyectos.html">
+                        <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                            height="60px">
+                    </a>
                 </div>
                 <article class="info-proyecto">
                     <h2>*/ Afiche</h2>
                     <h3>Océanos libres</h3>
                     <p>Este afiche fue realizado en el marco de la materia Taller de Diseño II,
-                con un enfoque en la problemática social de la contaminación ambiental. A través de una combinación de técnicas digitales y analógicas, este trabajo busca concientizar sobre el impacto devastador
-                que los derrames de petróleo tienen en la fauna marina.</p>
-                    </article>
+                        con un enfoque en la problemática social de la contaminación ambiental. A través de una
+                        combinación de técnicas digitales y analógicas, este trabajo busca concientizar sobre el impacto
+                        devastador
+                        que los derrames de petróleo tienen en la fauna marina.</p>
+                </article>
                 <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" alt="Diseño de infograFIA" target="_blank"> visitar</a>
+                    <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II"
+                        alt="Diseño de infograFIA" target="_blank"> visitar</a>
                 </div>
-            </div>
-            <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/oceanoslibres.jpg" alt="imagen afiche" width="720"
-                    height="933px">
-            </div>
         </section>
     </main>
 </body>
