--- a/irisvanherpen.html
+++ b/irisvanherpen.html
@@ -7,35 +7,32 @@
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
 </head>
+
 <body>
     <main>
         <section class="detalle-galeria">
-            <div>
-            <div class="detalle-titulo">
-                <a href="misproyectos.html">
-                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                        height="60px">
-                </a>
+                <div class="contenedor">
+                    <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="1300"
+                        height="870px">
                 </div>
-                <article class="info-proyecto">
-                    <h2>Afiche cultural</h2>
-                    <h3>Iris Van Herpen</h3>
-                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                        herpen
-                        una
-                        diseñadora de moda Holandesa</p>
-                </article>
-                <div class="boton-visitar">
-                    <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II" alt="Diseño de libro" 
-                        target="_blank">visitar</a>
+                <div class="detalle-titulo">
+                    <div class="boton-volver">
+                        <a href="misproyectos.html">
+                            <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                                height="60px">
+                        </a>
+                    </div>
+                    <article class="info-proyecto">
+                        <h2>Afiche cultural</h2>
+                        <h3>Iris Van Herpen</h3>
+                        <p>Trabajo realizado para la materia taller de diseño II, el objetivo
+                            del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
+                            herpen
+                            una
+                            diseñadora de moda Holandesa</p>
+                    </article>
                 </div>
-            </div>
-            <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/irisvanherpen.jpg" alt="imagen afiche" width="720"
-                    height="9px">
-            </div>
-        </section>
+            </section>
     </main>
 </body>
 
