--- a/jacquelinecasey.html
+++ b/jacquelinecasey.html
@@ -11,29 +11,26 @@
 <body>
     <main>
         <section class="detalle-galeria">
-            <div>
-                <div class="detalle-titulo">
-                    <a href="misproyectos.html">
-                        <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                            height="60px">
-                    </a>
-                </div>
+            <div class="contenedor">
+                <img src="./img/proyectos/img-proyectos-detalle/jaquelinecasey.jpg" alt="imagen afiche" width="1300"
+                    height="870px">
+            </div>
+            <div class="detalle-titulo">
+                    <div class="boton-volver">
+                <a href="misproyectos.html">
+                    <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
+                        height="60px">
+                </a>
+            </div>
                 <article class="info-proyecto">
-                    <h2>Afiche cultural</h2>
-                    <h3>Iris Van Herpen</h3>
-                    <p>Trabajo realizado para la materia taller de diseño II, el objetivo
-                        del mismo fue realizar una pieza sobre una diseñadora de moda selecciona. fue sobre Iris Van
-                        herpen
-                        una
-                        diseñadora de moda Holandesa</p>
+                    <h2>*/ editorial</h2>
+                    <h3>Catálogo de artista</h3>
+                    <p>Trabajo editorial realizado para la materia espacio tipográfico III, 
+                    es un catalogo de artista inspirado en la diseñadora grafica Jaqueline Casey. Se tomo su estilo para el desarrollo del mismo y se desatacaron sus trabajos mas importantes.</p>
                 </article>
                 <div class="boton-visitar">
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista" alt="Diseño de libtos" target="_blank">visitar</a>
                 </div>
-            </div>
-            <div class="contenedor">
-                <img src="./img/proyectos/img-proyectos-detalle/jaquelinecasey.jpg" alt="imagen afiche" width="720"
-                    height="933px">
             </div>
         </section>
     </main>
