--- a/misproyectos.html
+++ b/misproyectos.html
@@ -43,40 +43,40 @@
                             <img src="./img/proyectos/img-proyectos-pequeño/irisvanherpen.jpg"
                                 alt="Afiche Iris van Herpen">
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="irisvanherpen.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="irisvanherpen.html">Ver más</a>
                         </div>
                         <!-- Proyecto 2 -->
                         <div class="carousel-item">
                             <img src="./img/proyectos/img-proyectos-pequeño/latas.jpg" alt="Identidad de Latas">
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="identidadlatas.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="identidadlatas.html" >Ver más</a>
                         </div>
                         <!-- Proyecto 3 -->
                         <div class="carousel-item">
                             <img src="./img/proyectos/img-proyectos-pequeño/jacquelinecasey.jpg"
                                 alt="Proyecto Editorial">
                             <h4>Editorial</h4>
-                            <a class="ver-mas" href="jacquelinecasey.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="jacquelinecasey.html" >Ver más</a>
                         </div>
                         <!-- Proyecto 4 -->
                         <div class="carousel-item">
                             <img src="./img/proyectos/img-proyectos-pequeño/infografia.jpg" alt="Infografía">
                             <h4>Infografía</h4>
-                            <a class="ver-mas" href="infografia.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="infografia.html" >Ver más</a>
                         </div>
                         <!-- Proyecto 5 -->
                         <div class="carousel-item">
                             <img src="./img/proyectos/img-proyectos-pequeño/oceanoslibres.jpg"
                                 alt="AFiche océanos libres">
                             <h4>Afiche</h4>
-                            <a class="ver-mas" href="oceanoslibres.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="oceanoslibres.html" >Ver más</a>
                         </div>
                         <!-- Proyecto 6 -->
                         <div class="carousel-item">
                             <img src="./img/proyectos/img-proyectos-pequeño/juancito.jpg"
                                 alt="Imagen de identidad de juancito">
                             <h4>Identidad</h4>
-                            <a class="ver-mas" href="juancito.html" target="_blank">Ver más</a>
+                            <a class="ver-mas" href="juancito.html" >Ver más</a>
                         </div>
                     </div>
                 </div>
