--- a/infografia.html
+++ b/infografia.html
@@ -18,8 +18,8 @@
             <div class="detalle-titulo">
                 <div class="boton-volver">
                     <a href="misproyectos.html">
-                        <img src="./img/proyectos/iconos/boton-atras-detallado.png" alt="volver atras" width="60px"
-                            height="60px">
+                        <img src="./img/iconos/cruz.png" alt="volver atras" width="50px"
+                            height="50px">
                     </a>
                 </div>
                 <article class="info-proyecto">
