--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                 <a href="misproyectos.html">mis proyectos</a>
             </div>
             <div class="saludo-final">
-                <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba" width="60px" height="60px"></a>
+                <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba"
+                    width="60px" height="60px"></a>
                 <div class="despedida">
                     <h1>¡contactame!</h1>
                 </div>
