--- a/formulario.html
+++ b/formulario.html
@@ -5,16 +5,14 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
-<body class="body-formulario">
+<body>
     <header>
         <nav id="botonera">
             <div class="logo">
-                <a href="index.html">
-                    <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
-                </a>
+                <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
             </div>
             <div class="botones">
                 <a href="sobremi.html">Sobre mi</a>
@@ -26,20 +24,19 @@
     <main>
         <section class="contenedor-formulario">
             <div class="aviso">
-                <h1>contactame</h1>
+                <h2>*/ hablemos</h2>
                 <img src="./img/ilustraciones/ilustracion-avion.png" alt="ilustracion de avion" width="360px"
                     height="161px">
             </div>
             <div class="formulario">
                 <div class="texto-lectura">
-                    <h2> ¿Te gustaría que trabajemos en un proyecto juntos? </h2>
+                    <h3> ¿Te gustaría que trabajemos en un proyecto juntos? </h3>
                 </div>
                 <div class="campos">
                     <form method="post"
                         action="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia email enviado desde el formulario"
                         target="_blank" enctype="text/plain">
                         <div class="info">
-                            <p> *Los campos con asteriscos son obligatorios! </p>
                             <label for="Nombre"> Nombre y Apellido</label>
                             <input type="text" name="Nombre" id="Nombre" maxlength="30" placeholder=" Nombre completo"
                                 required>
@@ -47,6 +44,7 @@
                             <input type="email" name="email" id="Email" placeholder="Email" required>
                             <label for="tel">Teléfono</label>
                             <input type="tel" name="Telefono" id="Telefono" placeholder="(011)00000000">
+                            <p> *Los campos con asteriscos son obligatorios! </p>
                         </div>
                         <div class="info2">
                             <label for="Mensaje">Mensaje</label>
@@ -59,8 +57,8 @@
                         </div>
                     </form>
                 </div>
-                </div>
-            </section>
+            </div>
+        </section>
     </main>
     <footer id="contacto">
         <div class="redes">
@@ -75,15 +73,15 @@
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <h4>Linkedin</h4>
                 </a>
-                <h4>Linkedin</h4>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
                     <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <h4>natiioviedo92@gmail.com</h4>
                 </a>
-                <h4>natiioviedo92@gmail.com</h4>
             </div>
         </div>
         <div class="copy">
