--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <nav id="botonera">
             <div class="logo">
-                <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
             </div>
             <div class="botones">
                 <a href="sobremi.html">Sobre mi</a>
@@ -24,9 +24,10 @@
     <main>
         <section class="inicio">
             <div class="baner.img">
-                <img class="baner" src="./img/index/cv-02.jpg" alt="Chica sentada" width="1920px" height="550px">
-                <img class="brillo" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
-                <img class="brillo2" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
+                <img class="baner" src="./img/index/banner.jpg" alt="Chica sentada" width="1920px" height="550px">
+                <img class="brillo" src="./img/iconos/SVG/brillo.svg" alt="animacion brillo" width="60px" height="60px">
+                <img class="brillo2" src="./img/iconos/SVG/brillo.svg" alt="animacion brillo" width="60px"
+                    height="60px">
             </div>
             <div class="saludo">
                 <div>
@@ -40,53 +41,61 @@
             </div>
         </section>
         <section id="sobre-mi">
-            <article>
-            <h2> ¡te invito a conocerme!</h2>
+            <article class="invitacion">
+                <img src="./img/iconos/corazon2.png" alt="corazon" width="59px" height="51px">
+                <h2> Te invito a conocerme</h2>
+                <img src="./img/iconos/corazon2.png" alt="corazon" width="59px" height="51px">
             </article>
             <div class="botones-secundarios">
                 <a href="sobremi.html">sobre mi </a>
                 <a href="misproyectos.html">mis proyectos</a>
             </div>
+            <div>
+                <a href="#botonera" class="volver-arriba">
+                    <img src="./img/iconos/button.png" alt="volver-arriba" width="60px" height="60px">
+                </a>
+            </div>
             <div class="saludo-final">
-                <a href="#botonera" class="volver-arriba"><img src="./img/iconos/button.png" alt="volver-arriba"
-                    width="60px" height="60px"></a>
                 <div class="despedida">
-                    <h1>¡contactame!</h1>
+                    <h2>contactame</h2>
                 </div>
                 <div class="brillos-despedida">
-                <img class="brillo2-0" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
-                <img class="brillo-2" src="./img/iconos/brillo2.png" alt="animacion brillo" width="60px" height="60px">
+                    <img class="brillo2-0" src="./img/iconos/SVG/brillo-morado.svg" alt="animacion brillo" width="35px"
+                        height="37px">
+                    <img class="brillo-2" src="./img/iconos/SVG/brillo-morado.svg" alt="animacion brillo" width="35px"
+                        height="37px">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer id="contacto">
+        <div class="redes">
+            <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
+            </a>
+            <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
+            </a>
+        </div>
+        <div class="mensaje">
+            <div class="mje">
+                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
+                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <h4>Linkedin</h4>
+                </a>
+            </div>
+            <div class="mje">
+                <a
+                    href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
+                    <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <h4>natiioviedo92@gmail.com</h4>
+                </a>
             </div>
         </div>
-        </section>
-        </main>
-        <footer id="contacto">
-            <div class="redes">
-                <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                    <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
-                </a>
-                <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                    <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
-                </a>
-            </div><div class="mensaje">
-                <div class="mje">
-                    <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                        <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
-                    </a>
-                    <h4>Linkedin</h4>
-                </div>
-                <div class="mje">
-                    <a
-                        href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                        <img src="./img/logos/gmail.png" width="50px" height="50px">
-                    </a>
-                    <h4>natiioviedo92@gmail.com</h4>
-                </div>
-                </div>
-                <div class="copy">
-            <h6 > Copyright © 2024 Natalia Oviedo</h6>
+        <div class="copy">
+            <h6> Copyright © 2024 Natalia Oviedo</h6>
         </div>
-        </footer>
-    </body>
-    
-    </html>
+    </footer>
+</body>
+
+</html>
