--- a/juancito.html
+++ b/juancito.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ detalle de proyecto-editorial</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -23,10 +23,10 @@
                 </a>
             </div>
                 <article class="info-proyecto">
-                    <h2>*/ infografía</h2>
-                    <h3>mate eléctrico</h3>
-                    <p>Esta infografía fue realizada como parte de la materia Tipografía III, 
-                        en colaboración con mi colega Tomás Zuviría. El objetivo del trabajo era seleccionar un producto de diseño industrial producido en Argentina y desarrollar una infografía que lo representara.</p>
+                    <h2>*/ Identidad visual</h2>
+                    <h3>Re-diseño de marca</h3>
+                    <p>Este proyecto tuvo como objetivo rediseñar una marca existente, en este caso una pizzería de barrio, buscando simplificar su identidad visual y aplicar las habilidades adquiridas a lo largo del curso.
+                        El trabajo se realizó como parte de la materia Taller de Diseño III.</p>
                 </article>
                 <div class="boton-visitar">
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa" alt="Diseño de infograFIA" target="_blank"> visitar </a>
