--- a/misproyectos.html
+++ b/misproyectos.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <nav id="botonera">
             <div class="logo">
                 <a href="index.html">
-                    <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                    <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
                 </a>
             </div>
             <div class="botones">
@@ -97,15 +97,15 @@
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <h4>Linkedin</h4>
                 </a>
-                <h4>Linkedin</h4>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
                     <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <h4>natiioviedo92@gmail.com</h4>
                 </a>
-                <h4>natiioviedo92@gmail.com</h4>
             </div>
         </div>
         <div class="copy">
