--- a/jacquelinecasey.html
+++ b/jacquelinecasey.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ detalle de proyecto-editorial</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
