--- a/sobremi.html
+++ b/sobremi.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo/ sobre mi </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/favicon/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <nav id="botonera">
             <div class="logo">
                 <a href="index.html">
-                    <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+                    <img src="./img/iconos/SVG/corazon.svg" alt="animacion corazón" width="60px" height="52px">
                 </a>
             </div>
             <div class="botones">
@@ -34,24 +34,35 @@
                 <img src="./img/sobremi/fotos/torresdelp.jpg" alt="foto en torres del paine, Chile" width="450px"
                     height="580px">
                 <article class="presentacion">
-                    <h4>Diseñadora gráfica Jr.</h4>
+                    <h3>Diseñadora gráfica Jr.</h3>
                     <p>Hola! soy Natii, estudiante de Diseño y Comunicación Visual en la Universidad Nacional de Lanús,
                         en Buenos Aires. Actualmente estoy cursando el cuarto año. Me apasiona el diseño,
                         en especial la tipografía, y disfruto crear proyectos que conecten con las personas.
-                        Me considero creativa y responsable, siempre estoy en búsqueda de nuevos aprendizajes. Viajar para
+                        Me considero creativa y responsable, siempre estoy en búsqueda de nuevos aprendizajes. Viajar
+                        para
                         conocer diferentes culturas es uno de mis hobbies, y me inspira en mi proceso creativo.
                     </p>
                 </article>
             </div>
         </section>
         <section class="intereses">
-            <h2>*/ hobbies</h2>
+            <div class="hobbies">
+                <div class="titulo-hobbies">
+                    <h2>*/ hobbies</h2>
+                    <p>Escuchar musiquita mientras...</p>
+                </div>
+                <iframe id="iframe" style="border-radius:12px"
+                    src="https://open.spotify.com/embed/playlist/1vQAHdCVGGtu2A9ekZplmK?utm_source=generator"
+                    width="50%" height="300" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
             <ul>
-                <li>crear</li>
-                <li>aprender</li>
-                <li>viajar</li>
+                <li><img src="./img/iconos/corazon3.png" alt=" Logo Creo" width="30px" height="32px">creo</li>
+                <li>pienso</li>
+                <li>viajo</li>
             </ul>
-            <img src="./img/giff/ilustracion.gif" alt="animacion de lineas" width="1910px" height="430px">
+            <img src="./img/giff/ilustracion.gif" class="gif" alt="animacion de lineas" width="90%" height="430px">
         </section>
         <section class="informacion-personal"> <!---ver si este div es necesario--->
             <div class="grid-item uno">
@@ -105,15 +116,15 @@
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
+                    <h4>Linkedin</h4>
                 </a>
-                <h4>Linkedin</h4>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
                     <img src="./img/logos/gmail.png" width="50px" height="50px">
+                    <h4>natiioviedo92@gmail.com</h4>
                 </a>
-                <h4>natiioviedo92@gmail.com</h4>
             </div>
         </div>
         <div class="copy">
